--- a/client/static/index.html
+++ b/client/static/index.html
@@ -7,6 +7,8 @@
     <title>Webpack Dev Middleware</title>
   </head>
   <body>
-    <h1>Get Your Hot Webpack Dev Middleware Right Here, Bruds!</h1>
+    <header>
+      <h1>Get Your Hot Webpack Dev Middleware Right Here, Bruds!</h1>
+    </header>
   </body>
 </html>
